Fix noti